add edit2 config.yml

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,9 +1,10 @@
 # circle.yml
 jobs:
-  machine:
-    node:
-      version: 0.10
+  build:
+    machine:
+      node:
+        version: 0.10
 
-test:
-  override:
-    - ./node_modules/.bin/mocha
+  test:
+    override:
+      - ./node_modules/.bin/mocha
